[tool.poetry]
name = "plutoplot"
version = "0.3.0rc1"
description = "Python package to load PLUTO simulation data"
authors = ["Simeon Doetsch <science@simske.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Simske/plutoplot"
documentation = "https://plutoplot.readthedocs.io"
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Simske/plutoplot/issues"

[tool.poetry.scripts]
pluto-info = "plutoplot.info:main"
pluto-format-ini = "plutoplot.scripts:format_ini"

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
numpy = "^1.16"
matplotlib = "^3.0"
h5py = { version = ">=2.6", optional = true }
ipywidgets = { version = ">=7.0", optional = true }

[tool.poetry.extras]
hdf5 = ["h5py"]
interactive = ["ipywidgets"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
