[tool.poetry]
name = "plutoplot"
version = "0.2.1"
description = "Python package to load PLUTO simulation data"
authors = ["Simeon Doetsch <science@simske.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Simske/plutoplot"
documentation = "https://plutoplot.readthedocs.io"
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Simske/plutoplot/issues"

[tool.poetry.scripts]
pluto-info = "plutoplot.info:main"
pluto-format-ini = "plutoplot.scripts:format_ini"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.19"
matplotlib = "^3.3"
h5py = { version = "^3.0", optional = true }
ipywidgets = { version = "^7.0", optional = true }

[tool.poetry.extras]
hdf5 = ["h5py"]
interactive = ["ipywidgets"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
tox = "^3.24.5"
tox-gh-actions = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
