[metadata]
name = plutoplot
author = Simeon Doetsch
author_email = science@simske.com
url = https://gitlab.com/simske/plutoplot

[options]
packages = plutoplot
install_requires =
    numpy
    matplotlib

[options.entry_points]
console_scripts =
    pluto-format-ini = plutoplot.scripts:format_ini
    pluto-info = plutoplot.info:main

[options.extras_require]
interactive = ipywidgets

[versioneer]
VCS = git
style = pep440
versionfile_source = plutoplot/_version.py
tag_prefix = v
