[metadata]
name = plutoplot
author = Simeon Doetsch
author_email = science@simske.com
description = PLUTO code data lodaing and plotting for Python
url = https://github.com/Simske/plutoplot
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/Simske/plutoplot/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = plutoplot
python_requires = >=3.6
install_requires =
    numpy
    matplotlib

[options.extras_require]
interactive = ipywidgets
hdf5 = h5py

[options.entry_points]
console_scripts =
    pluto-format-ini = plutoplot.scripts:format_ini
    pluto-info = plutoplot.info:main

[versioneer]
VCS = git
style = pep440
versionfile_source = plutoplot/_version.py
tag_prefix = v
